[package]
name = "tmust"
version = "0.1.0"
authors = ["Chris Muthig <camuthig@gmail.com>"]
edition = "2018"

[dependencies]
quicli = "^0.4"
structopt = "^0.2"
clap = "^2"
dirs = "^1"
handlebars = "^1"
serde_json = "^1"
serde_yaml = "^0.8"
regex = "^1"
run_script = "^0.3"

[dependencies.serde]
version = "^1"
features = ["derive"]

[profile.release]
lto = true
